--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9, "3.10"]
-        django-version: ["3.2.*", "4.0.*", "4.1.*"]
+        django-version: ["3.2", "4.0", "4.1"]
 
     steps:
     - uses: actions/checkout@v2
@@ -26,7 +26,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements-dev.txt
-        pip install 'django==${{ matrix.django-version }}'
+        pip install 'django~=${{ matrix.django-version }}'
 
     - name: Run Tests
       run: |
@@ -50,4 +50,4 @@ jobs:
 
     - name: Lint Code
       run: |
-        flake8 dynamic_rest tests
+        flake8 django_range_merge tests
