--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,11 +1,10 @@
 flake8>=3.0
-mock==2.0.0
-psycopg2-binary==2.9.3
+mock~=2.0
+psycopg2-binary~=2.9
 pytest-cov==3.0.0
 pytest-django==4.5.2
 pytest-sugar==0.9.5
 pytest>=7.0.0
-Sphinx==1.7.5
 tox-pyenv==1.1.0
 tox==3.25.1
 twine==3.8.0
