--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,8 @@
 [tox]
-envlist = py39-django{32,40, 41}
+envlist = py39-django{32,40,41}
 
-[doc8]
-; D001 = Line too long
-ignore = D001
+[flake8]
+max-line-length = 120
 
 [pycodestyle]
 exclude = .git,.tox,migrations
@@ -32,7 +31,7 @@ match-dir = (?!migrations)
 [pytest]
 DJANGO_SETTINGS_MODULE = test_settings
 addopts = --cov django_range_merge --cov-report term-missing --cov-report xml
-norecursedirs = .* docs requirements site-packages
+norecursedirs = .* site-packages
 
 [testenv]
 deps = 
@@ -58,5 +57,4 @@ commands =
     pycodestyle django_range_merge tests manage.py setup.py
     pydocstyle django_range_merge tests manage.py setup.py
     isort --check-only --diff tests test_utils django_range_merge manage.py setup.py test_settings.py
-    make selfcheck
 
