--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
 
     - name: Run Tests
       run: |
-        ./runtests.py --fast --coverage -rw
+        python runtests.py --fast --coverage -rw
 
   lint:
     runs-on: ubuntu-latest
@@ -46,7 +46,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8==5.0.4
+        pip install flake8~=5.0
 
     - name: Lint Code
       run: |
