--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,12 @@
-*.py[cod]
-__pycache__
-.pytest_cache
-
-# C extensions
-*.so
-
-# Packages
-*.egg
-*.egg-info
-/dist
+.mypy_cache/
 /build
-/eggs
-/parts
-/bin
-/var
-/sdist
-/develop-eggs
-/.installed.cfg
-/lib
-/lib64
-
-# Unit test / coverage reports
-.cache/
-.pytest_cache/
-.coverage
-.coverage.*
-.tox
-coverage.xml
-htmlcov/
-
-# Virtual Env
+/.coverage
+/.coverage.*
+/.nox/
+/.python-version
+/.pytype/
+/dist/
+/docs/_build/
+/src/*.egg-info/
+__pycache__/
 .venv/
